# musicload

./: .dockerignore  Dockerfile  LICENSE  README.md  cliff.toml  cron.example.yaml  cron.yaml  docker-compose.cron.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
examples/third-party-plugin/: README.md  pyproject.toml
examples/third-party-plugin/musicload_demo/: __init__.py  plugin.py
musicload/: __init__.py  app.py  cli.py  config.py  deezer.py  download.py  hooks.py  library_index.py  lyrics.py  metadata_cache.py  navidrome.py  notifications.py  playlist.py  queue.py  reference_checker.py  replaygain.py  search.py  tagging.py  unavailable.py  yt_dlp_wrapper.py
musicload/cron/: cli.py  config.py  explore_sync.py  scheduler.py  state.py  sync.py
musicload/models/: __init__.py  cron.py  deezer.py  queue.py  search.py  state.py  unavailable.py
musicload/plugins/: __init__.py  base.py  billboard.py  cli.py  listenbrainz.py  reddit.py  registry.py  rss.py  state.py  sync.py
musicload/web/: __init__.py  api_cache.py  app.py  auth.py  image_proxy.py  logs.py
musicload/web/static/: manifest.json  style.css  sw.js
musicload/web/templates/: index.html  login.html
