[project]
name = "musicload"
version = "0.23.0"
description = "Search and download music from YouTube Music with lyrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2025.12.8",
    "ytmusicapi>=1.8.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "uvicorn>=0.34.0",
    "typer>=0.15.0",
    "httpx>=0.27.0",
    "mutagen>=1.47.0",
    "apscheduler>=3.10.4",
    "pyyaml>=6.0.1",
    "croniter>=1.3.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
musicload = "musicload.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
